src/components/personalData/navigationBlock/navigationBlock.module.scss
.navigationWrap {
	display: grid;
	align-items: center;
}

.backButton {
	display: flex;
	align-items: center;
	grid-column: 1/2;
	grid-row: 1/2;
	justify-self: start;
	gap: 16px;
	font-size: 28px;
	color: var(--floral-white);
	background-color: transparent;
	border: 1px solid var(--floral-white);
	padding: 21px 66px;

	&__arrow {
		flex-shrink: 0;
		width: 34px;
	}

	p {
		flex-shrink: 0;
	}
}

.navigationListWrap {
	grid-column: 1/2;
	grid-row: 1/2;
	justify-self: center;
	display: flex;
	margin: 0 auto;
	font-weight: 300;
	gap: 56px;
	list-style: none;
}

@media (max-width: 1921px) {
	.backButton {
		font-size: 20px;
		gap: 12px;
		padding: 16px 50px;

		&__arrow {
			width: 24px;
			height: 24px;
		}
	}
}

@media (max-width: 1441px) {
	.backButton {
		font-size: 16px;
		gap: 9px;
		padding: 12px 38px;

		&__arrow {
			width: 19px;
			height: 19px;
		}
	}

	.navigationListWrap {
		gap: 32px;
	}
}

@media (max-width: 1171px) {
	.backButton {
		font-size: 14px;
		gap: 8px;
		padding: 9px 30px;

		&__arrow {
			width: 15px;
			height: 15px;
		}
	}

	.navigationListWrap {
		gap: 26px;
	}
}

@media (max-width: 1025px) {
	.backButton {
		font-size: 12px;
		gap: 6px;
		padding: 8px 26px;

		&__arrow {
			width: 13px;
			height: 13px;
		}
	}

	.navigationListWrap {
		font-size: 18px;
		gap: 22px;
	}
}

@media (max-width: 769px) {
	.backButton {
		font-size: 14px;
		gap: 4px;
		padding: 9px 32px;

		&__arrow {
			width: 15px;
			height: 15px;
		}
	}

	.navigationListWrap {
		font-size: 14px;
		gap: 32px;
	}
}

